plugins {
    id 'java'
}

group 'org.numparsing'
version '1.0'

compileJava.sourceCompatibility = "17"
compileJava.targetCompatibility = "17"

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}

test {
    useJUnitPlatform()
}